# firecan

./: .gitignore  Makefile  README.md  pyproject.toml
firecan/config/: config.py
firecan/tasks/01_image_collection/: image_collection.py  task.py  test_collection.py
firecan/tasks/02_animation/: animation.py  common.py  task.py
